fixing columns on smaller viewports

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,6 +1,9 @@
 html {
   background-color: #fff;
-  font-size: 21px;
+  font-size: 18px;
+  @media (min-width: 768px) {
+    font-size: 21px;
+  }
 }
 body {
   line-height: 1.4;
@@ -12,19 +15,21 @@ body {
   background: url('../images/bg-light.png') center;
 }
 h1, h2, h3, p, li, a {
+  margin: 0;
   letter-spacing: -.0125em;
 }
 h1 {
   font-size: 1.5rem;
   line-height: 1;
-  margin: 0;
+  margin-bottom: 1rem;
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 h2 {
   font-size: 1.5rem;
-  margin: 0;
 }
 h3 {
-  margin: 0;
   font-size: 1.125rem;
   line-height: 1.125;
 }
@@ -32,33 +37,27 @@ a {
   color: #111;
   text-decoration: none;
   border-bottom: 2px dotted;
-}
-a:visited {
-  color: #444;
-}
-a:hover, a:focus {
-  border-bottom: none;
-}
-a:focus {
-  outline: 3px dashed;
+  &:hover,
+  &:focus {
+    border-bottom: none;
+  }
+  &:focus {
+    outline: 3px dashed;
+  }
+  &:visited {
+    color: #444;
+  }
 }
 ul {
   margin: 0;
   padding-left: 0;
   list-style: none;
 }
-ul ul {
-  padding-left: 1rem;
-  list-style-type: circle;
-}
-.text--regular {
-  font-weight: 400;
-}
-.text--bold {
-  font-weight: 700;
-}
 .mobile-only {
-  display: none;
+  display: block;
+  @media (min-width: 600px) {
+    display: none;
+  }
 }
 .hr--mini {
   margin: 0 auto;
@@ -87,40 +86,55 @@ ul ul {
 header {
   grid-area: header;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid #111;
   padding-bottom: 1rem;
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 footer {
   grid-area: footer;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   border-top: 2px solid #111;
   padding-top: 1rem;
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 main {
   grid-area: main;
   display: grid;
-  grid-template-areas: 'mission mission' 'hr1 hr1' 'experience experience' 'hr2 hr2' 'skills skills' 'hr3 hr3' 'training education';
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: 'mission' 'hr1' 'experience' 'hr2' 'skills' 'hr3' 'training' 'hr4' 'education';
   grid-gap: 2rem;
+  @media (min-width: 600px) {
+    grid-template-areas: 'mission mission' 'hr1 hr1' 'experience experience' 'hr2 hr2' 'skills skills' 'hr3 hr3' 'training education';
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .haunts {
   display: flex;
-}
-.haunts li {
-  line-height: 1;
-}
-.haunts li + li {
-  margin-left: 1rem;
+  li {
+    line-height: 1;
+    + li {
+      margin-left: 1rem;
+    }
+  }
 }
 
 .copyright {
   line-height: 1;
+  margin-top: 1rem;
+  @media (min-width: 768px) {
+    margin-top: 0;
+  }
 }
 
 
@@ -142,9 +156,11 @@ main {
 }
 .skills {
   grid-area: skills;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1.5rem 2rem;
+  @media (min-width: 600px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1.5rem 2rem;
+  }
 }
 .skills h2 {
   grid-column: span 2;
